[gd_scene load_steps=4 format=3 uid="uid://b3ff7xd1sb0og"]

[ext_resource type="Theme" uid="uid://6q2onjex0t3g" path="res://ui/base.theme" id="1_dv7el"]
[ext_resource type="Script" path="res://ui/buildings/craft/crafting_menu.gd" id="2_67qoq"]
[ext_resource type="PackedScene" uid="uid://wx5006y5bujo" path="res://ui/buildings/craft/needed_item_panel/needed_item_panel.tscn" id="3_mnn0u"]

[node name="CraftingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dv7el")
script = ExtResource("2_67qoq")

[node name="Backdrop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2)

[node name="M" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="H" type="HBoxContainer" parent="M"]
layout_mode = 2
alignment = 1

[node name="AvailableItemsGrid" type="GridContainer" parent="M/H"]
layout_mode = 2

[node name="ItemPanel" parent="M/H/AvailableItemsGrid" instance_placeholder="res://ui/buildings/craft/item_panel/item_panel.tscn"]
layout_mode = 2

[node name="ItemPanel2" parent="M/H/AvailableItemsGrid" instance_placeholder="res://ui/buildings/craft/item_panel/item_panel.tscn"]
layout_mode = 2

[node name="V" type="VBoxContainer" parent="M/H"]
layout_mode = 2

[node name="M" type="MarginContainer" parent="M/H/V"]
layout_mode = 2

[node name="Background" type="ColorRect" parent="M/H/V/M"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
color = Color(0.807843, 0.352941, 0.403922, 1)

[node name="V" type="VBoxContainer" parent="M/H/V/M"]
layout_mode = 2

[node name="Spacer" type="MarginContainer" parent="M/H/V/M/V"]
layout_mode = 2

[node name="CraftedItemLabel" type="Label" parent="M/H/V/M/V"]
layout_mode = 2
text = "Example"
horizontal_alignment = 1

[node name="Needs" type="VBoxContainer" parent="M/H/V/M/V"]
layout_mode = 2

[node name="NeededItemPanel" parent="M/H/V/M/V/Needs" instance=ExtResource("3_mnn0u")]
layout_mode = 2

[node name="NeededItemPanel2" parent="M/H/V/M/V/Needs" instance=ExtResource("3_mnn0u")]
layout_mode = 2
in_stock = 20
